Move source files to src folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@ project(manic_miner_assembly_port)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
-        character_set.c
-        data.c
-        externs.h
-        globals.c
-        headers.h
-        helpers.c
-        mm.c)
+        src/headers.h
+        src/externs.h
+        src/helpers.c
+        src/globals.c
+        src/character_set.c
+        src/data.c
+        src/main.c)
 
 add_executable(manic_miner_assembly_port ${SOURCE_FILES})
