C++14 compiler and rename files for C++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,51 +7,54 @@ set(VERSION_MAJOR 0)
 set(VERSION_MINOR 1)
 set(VERSION_PATCH 0)
 
-set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
-        src/headers.h
-        src/globals.h
-        src/helpers.h
-        src/helpers.c
-        src/globals.c
-        src/speccy.h
-        src/speccy.c
-        src/window.h
-        src/window.c
-        src/sound.h
-        src/sound.c
-        src/colour.h
-        src/coord.h
-        src/data.h
-        src/data/data_caverns.c
-        src/data/data_guardian_sprites.c
-        src/data/data_music.c
-        src/data/data_tiles.c
-        src/data/data_title_screen.c
-        src/data/data_willy_sprites.c
-        src/conveyor.h
-        src/cavern.h
-        src/cavern.c
-        src/guardian_horizontal.h
-        src/guardian_horizontal.c
-        src/guardian_vertical.h
-        src/guardian_vertical.c
-        src/kong_beast.h
-        src/kong_beast.c
-        src/item.h
-        src/portal.h
-        src/tile.h
-        src/willy.h
-        src/willy.c
-        src/game.h
-        src/game.c
-        src/main.c)
+        src/Headers.h
+        src/Globals.h
+        src/Helpers.h
+        src/Helpers.cpp
+        src/Globals.cpp
+        src/Speccy.h
+        src/speccy/Font.cpp
+        src/Speccy.cpp
+        src/Window.h
+        src/Window.cpp
+        src/Sound.h
+        src/Sound.cpp
+        src/Colour.h
+        src/Coord.h
+        src/Data.h
+        src/data/Caverns.cpp
+        src/data/GuardianSprites.cpp
+        src/data/Music.cpp
+        src/data/Tiles.cpp
+        src/data/TitleScreen.cpp
+        src/data/WillySprites.cpp
+        src/Conveyor.h
+        src/Cavern.h
+        src/Cavern.cpp
+        src/GuardianHorizontal.h
+        src/GuardianHorizontal.cpp
+        src/GuardianVertical.h
+        src/GuardianVertical.cpp
+        src/KongBeast.h
+        src/KongBeast.cpp
+        src/Item.h
+        src/Portal.h
+        src/Tile.h
+        src/Willy.h
+        src/Willy.cpp
+        src/Game.h
+        src/Game.cpp
+        src/Main.cpp)
 
 add_executable(manic_miner ${SOURCE_FILES})
 
-#set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -g -Wall -Werror -Wshadow -std=gnu11")
-set(CMAKE_C_FLAGS  "${CMAKE_C_FLAGS} -g -Wall -std=gnu11")
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED on)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Werror -Wshadow -std=c++14")
 
 # Link Curses
 find_package(Curses REQUIRED)
