Move Speccy Font to header file and change Speccy to C++ class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(SOURCE_FILES
         src/Helpers.cpp
         src/Globals.cpp
         src/Speccy.h
-        src/speccy/Font.cpp
+        src/Speccy_Font.h
         src/Speccy.cpp
         src/Window.h
         src/Sound.h
