Refactor Window and implement Display

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,10 @@ set(SOURCE_FILES
         src/Speccy.h
         src/SpeccyFont.cpp
         src/Speccy.cpp
+        src/Display.h
+        src/Display.cpp
         src/Window.h
+        src/Window.cpp
         src/Sound.h
         src/Sound.cpp
         src/Colour.h
